# Personal-Assistant

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  App.tsx  Dockerfile  README.md  alembic.ini  constants.ts  docker-compose.yml  index.html  mcp_config.json  metadata.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.sh  types.ts
.github/workflows/: backend-ci.yml  mobile-ci.yml  mobile-production.yml
alembic/: env.py
alembic/versions/: 20260106_0001_initial_schema.py
alfred/: config.py  main.py
alfred/api/: __init__.py  auth.py  connectors.py  dashboard.py  habits.py  knowledge.py  notifications.py  proactive.py  projects.py  tasks.py  voice.py
alfred/api/middleware/: __init__.py  auth.py  error_handler.py  logging.py  rate_limit.py
alfred/core/: butler.py  config_manager.py  entities.py  interfaces.py  knowledge_extractor.py  orchestrator.py  proactive_engine.py
alfred/core/agents/: __init__.py  base.py  context.py  executor.py  memory_agent.py  planning_agent.py  task_agent.py
alfred/core/connectors/: __init__.py  base.py  github.py  gmail.py  google_calendar.py  linear.py  manager.py  notion.py  outlook.py  registry.py  slack.py
alfred/core/services/: __init__.py  auth_service.py  base.py  briefing_service.py  chat_service.py  habit_service.py  project_service.py  task_service.py
alfred/core/tools/: __init__.py  base.py  habits.py  notifications.py  projects.py  registry.py  tasks.py  user.py
alfred/infrastructure/knowledge/: __init__.py  base.py  neo4j_graph.py
alfred/infrastructure/llm/: __init__.py  anthropic_adapter.py  base.py  factory.py  google_adapter.py  groq_adapter.py  mock_provider.py  ollama_adapter.py  openai_adapter.py
alfred/infrastructure/notifications/: __init__.py  expo_push.py
alfred/infrastructure/scheduler/: __init__.py  scheduler.py
alfred/infrastructure/storage/: __init__.py  postgres_db.py  sqlite_db.py
alfred/infrastructure/vector/: __init__.py  base.py  embeddings.py  qdrant.py
alfred/integrations/: __init__.py  base.py  manager.py
alfred/integrations/google/: __init__.py  calendar.py
alfred_doc/: .env.example  CLAUDE.md  Dockerfile  GETTING_STARTED.md  README.md  backend-ci.yml  docker-compose.yml  mobile-ci.yml  mobile-production.yml  requirements.txt
app/agents/: alfred_agent.py
app/api/: main.py
components/: Chat.tsx  Dashboard.tsx  Decisions.tsx  Integrations.tsx  Layout.tsx  Onboarding.tsx
docs/: ALFRED_ARCHITECTURE.md  ALFRED_ENHANCED_ARCHITECTURE.md  ALFRED_ROADMAP.md  ALFRED_SPECIFICATION.md  ALFRED_UI_DESIGN.md  API.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  DB_SCHEMA.md  FEATURE_SPECIFICATION.md  KNOWLEDGE_BASE.md  MCP_SETUP.md  PRODUCT_VISION.md  QUICK_REFERENCE.md  VECTOR_AND_KNOWLEDGE_GRAPH.md
lib/: storage.ts
mobile/: App.tsx  app.json  package-lock.json  package.json
mobile/app/: _layout.tsx  connectors.tsx  reminders.tsx
mobile/app/(auth)/: _layout.tsx  login.tsx
mobile/app/(tabs)/: _layout.tsx  do.tsx  focus.tsx  today.tsx  you.tsx
mobile/app/settings/: index.tsx
mobile/src/api/: client.ts  services.ts
mobile/src/components/: index.ts
mobile/src/components/alfred/: AlfredAvatar.tsx  ProactiveCard.tsx  TransparencyPanel.tsx  index.ts
mobile/src/components/calendar/: DayStrip.tsx  EventCard.tsx  TimelineView.tsx  index.ts
mobile/src/components/common/: AnimatedCard.tsx  Button.tsx  Card.tsx  ErrorBoundary.tsx  Skeleton.tsx  Text.tsx  index.ts
mobile/src/components/habits/: HabitChip.tsx  index.ts
mobile/src/components/input/: ConversationInput.tsx  index.ts
mobile/src/components/navigation/: AnimatedTabBar.tsx  index.ts
mobile/src/components/tasks/: TaskCard.tsx
mobile/src/lib/hooks/: index.ts  useAlfred.ts  useHaptics.ts  useOptimistic.ts  useVoiceRecording.ts
mobile/src/lib/offline/: offlineQueue.ts
mobile/src/lib/store/: alfredStore.ts
mobile/src/screens/: AboutScreen.tsx  ChatScreen.tsx  CompaniesScreen.tsx  ConnectorsScreen.tsx  DashboardScreen.tsx  DoScreen.tsx  EditProfileScreen.tsx  EntityDetailScreen.tsx  EveningReviewModal.tsx  FocusScreen.tsx  HabitsScreen.tsx  IntegrationsScreen.tsx  LoginScreen.tsx  NotificationSettingsScreen.tsx  OnboardingScreen.tsx  PeopleScreen.tsx  PreferencesScreen.tsx  PrivacySettingsScreen.tsx  ProfileScreen.tsx  ProjectsScreen.tsx  RemindersScreen.tsx  SettingsScreen.tsx  SignupScreen.tsx  TasksScreen.tsx  TodayScreen.tsx  VoiceModal.tsx  VoiceSettingsScreen.tsx  YouScreen.tsx  index.ts
mobile/src/screens/auth/: LoginScreen.tsx  OnboardingScreen.tsx  SignupScreen.tsx
mobile/src/screens/details/: CompaniesScreen.tsx  ConnectorsScreen.tsx  EntityDetailScreen.tsx  IntegrationsScreen.tsx  (+3 more)
mobile/src/services/: notifications.ts
mobile/src/theme/: ThemeContext.tsx  index.ts  tokens.ts
scripts/: seed_pratap_data.py
services/: agentSystem.ts  geminiService.ts
tests/: conftest.py
tests/api/: test_main_endpoints.py
tests/fixtures/: tasks.json  users.json
tests/unit/agents/: test_task_agent.py
tests/unit/api/: test_health.py
tests/unit/core/: test_orchestrator.py
tests/unit/llm/: test_providers.py
tests/unit/services/: test_chat_service.py  test_habit_service.py  test_task_service.py
(+21 files in other folders)
